--- a/SoftwareENgineering&WebdevProject/css/contactus.css
+++ b/SoftwareENgineering&WebdevProject/css/contactus.css
@@ -1,75 +1,71 @@
-body {
+.contact-container {
+    width: 300px;
+    margin: 0 auto;
+    margin-top: 50px;
+    padding: 20px;
     background-color: #ffffff;
-    color: #333333;
-    font-family: Arial, sans-serif;
-}
-
-.contact-container{
-    position: absolute;
-    top: 70%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    padding: 20px;
-    background-color: #3C0295;
     border-radius: 8px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-h2 {
-    color: #ffffff;
+.contact-container h2,
+.contact-container p {
+    color: #3C0295;
 }
 
-p {
-    color: #ffffff;
-}
-
-form {
+.contact-container form {
     margin-top: 20px;
-}
-
-label {
-    display: block;
-    margin-bottom: 8px;
-    color: #ffffff;
-}
-
-input[type="text"],
-textarea {
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
     width: 100%;
+}
+
+.contact-container label {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 8px;
+    color: #3C0295;
+    width: 100%;
+}
+
+.contact-container input[type="text"],
+.contact-container textarea {
+    padding: 10px;
+    width: calc(50% - 10px);
     box-sizing: border-box;
-    border: 1px solid #ffffff;
+    border: 1px solid #3C0295;
     border-radius: 4px;
     font-size: 16px;
     color: #333333;
     background-color: #ffffff;
+    margin-right: 10px;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.2); /* Add text box shadow */
 }
 
-input[type="text"]:focus,
-textarea:focus {
-    outline: none;
-    border-color: #ffffff;
+.contact-container textarea {
+    width: 100%;
+    margin-right: 0;
 }
 
-button {
+.contact-container button {
     margin-top: 16px;
     padding: 10px 20px;
     font-size: 16px;
     border: none;
     border-radius: 4px;
-    background-color: #ffffff;
-    color: #3C0295;
+    background-color: #3C0295;
+    color: white;
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-button:hover {
+.contact-container button:hover {
     background-color: #6a1b9a;
     color: #ffffff;
 }
 
-button:focus {
+.contact-container button:focus {
     outline: none;
     box-shadow: 0 0 0 2px #ffffff;
 }
