--- a/SoftwareENgineering&WebdevProject/css/passwordchanger.css
+++ b/SoftwareENgineering&WebdevProject/css/passwordchanger.css
@@ -1,3 +1,14 @@
+body {
+    margin: 0;
+    padding: 0;
+    background-color: white;
+    color: #3C0295;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    font-family: "Bubblegum Sans", cursive;
+}
 .form {
     position: absolute;
     top: 50%;
