--- a/SoftwareENgineering&WebdevProject/css/findus.css
+++ b/SoftwareENgineering&WebdevProject/css/findus.css
@@ -3,7 +3,7 @@ h1, h2 {
     font-size: 2rem;
     margin-bottom: 20px;
     text-align: center;
-    font-family: Arial, sans-serif;
+    font-family: "Bubblegum Sans", cursive;
 }
 
 h1 {
