--- a/SoftwareENgineering&WebdevProject/css/contactus.css
+++ b/SoftwareENgineering&WebdevProject/css/contactus.css
@@ -40,7 +40,7 @@
     color: #333333;
     background-color: #ffffff;
     margin-right: 10px;
-    box-shadow: 0 0 2px rgba(0, 0, 0, 0.2); /* Add text box shadow */
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
 }
 
 .contact-container textarea {
