--- a/SoftwareENgineering&WebdevProject/css/footer.css
+++ b/SoftwareENgineering&WebdevProject/css/footer.css
@@ -1,4 +1,3 @@
-
 .footer-body {
     margin: 0;
     padding: 0;
@@ -16,8 +15,8 @@
     color: white;
     padding: 20px 0;
     text-align: center;
-    margin-top: auto; /* Push footer to the bottom of the page */
-    width: 100%; /* Full width footer */
+    margin-top: auto;
+    width: 100%;
 }
 
 .social-list {
