--- a/SoftwareENgineering&WebdevProject/css/style.css
+++ b/SoftwareENgineering&WebdevProject/css/style.css
@@ -50,7 +50,6 @@ h2 {
     margin-top: 20px;
 }
 
-
 .productbutton:hover {
     transform: scale(1.1);
     background-color:#3C0295;
@@ -59,7 +58,7 @@ h2 {
 
 .categories {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     overflow: hidden;
 }
 
@@ -72,13 +71,12 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-right: 150px;
+    margin-right: 200px;
     transition: transform 0.2s ease;
 }
 
 .category-item:hover {
     transform: scale(1.1);
-
 }
 
 .category-item img {
@@ -88,11 +86,13 @@ h2 {
     object-fit: cover;
     margin-bottom: 10px;
 }
+
 .category-name {
     text-align: center;
     color: black;
     text-decoration: none;
 }
+
 @keyframes slide-in {
     from {
         transform: translateX(-100%);
@@ -150,4 +150,3 @@ h2 {
     font-weight: bold;
     color: #333;
 }
-
