--- a/SoftwareENgineering&WebdevProject/css/style.css
+++ b/SoftwareENgineering&WebdevProject/css/style.css
@@ -45,14 +45,14 @@ body {
 
 h2 {
     font-weight: bold;
-    font-size: 1.6em;
+    font-size: 1.5em;
     text-align: center;
     margin-top: 20px;
 }
 
 .productbutton:hover {
     transform: scale(1.1);
-    background-color:#3C0295;
+    background-color: #3C0295;
     color: #fff;
 }
 
@@ -60,6 +60,8 @@ h2 {
     display: flex;
     justify-content: center;
     overflow: hidden;
+    padding:20px;
+
 }
 
 .category-list {
@@ -67,30 +69,24 @@ h2 {
     animation: slide-in 2s forwards;
 }
 
-.category-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-right: 150px;
-    transition: transform 0.2s ease;
-}
-
 .category-item:hover {
     transform: scale(1.1);
 }
 
 .category-item img {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
     object-fit: cover;
+    padding:20px;
     margin-bottom: 10px;
 }
 
-.category-name {
-    text-align: center;
-    color: black;
-    text-decoration: none;
+.category-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding:20px;
 }
 
 @keyframes slide-in {
@@ -104,7 +100,7 @@ h2 {
 
 .products {
     padding: 20px;
-    color:#3C0295;
+    color: #3C0295;
 }
 
 .product-list {
@@ -114,9 +110,9 @@ h2 {
 }
 
 .product {
-    flex: 0 0 calc(100% - 30px);
-    margin: 225px;
-    padding: 100px;
+    flex: 0 0 calc(100% / 2 - 30px);
+    margin: 15px;
+    padding: 15px;
     border: 2px solid #3C0295;
     border-radius: 8px;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
@@ -131,7 +127,7 @@ h2 {
 
 .product img {
     width: 100%;
-    height:auto;
+    height: auto;
     border-radius: 8px;
 }
 
