--- a/SoftwareENgineering&WebdevProject/css/products.css
+++ b/SoftwareENgineering&WebdevProject/css/products.css
@@ -5,6 +5,17 @@
     display: flex;
     flex-direction: column;
 }
+.img{
+    width: 50%;
+    height: auto;
+    max-width: 50px;
+    max-height: 50px;
+    display: block;
+    margin: 0 auto;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
 
 .filters {
     padding: 20px;
