--- a/SoftwareENgineering&WebdevProject/css/paymentedit.css
+++ b/SoftwareENgineering&WebdevProject/css/paymentedit.css
@@ -30,7 +30,7 @@
     display: inline-block;
     margin-right: 10px;
     text-decoration: none;
-    color: #007bff;
+    color: #3C0295;
 }
 
 .card a:hover {
