--- a/SoftwareENgineering&WebdevProject/css/status.css
+++ b/SoftwareENgineering&WebdevProject/css/status.css
@@ -41,7 +41,7 @@ h1 {
 }
 
 .status {
-    color: #0056b3;
+    color: #3C0295;
     font-weight: bold;
     margin-bottom: 5px;
 }
@@ -63,7 +63,7 @@ h1 {
 
 .btn {
     display: inline-block;
-    background-color: #0056b3;
+    background-color:#3C0295;
     color: #fff;
     padding: 10px 20px;
     margin: 10px 0;
@@ -117,7 +117,7 @@ h1 {
 }
 
 .product-price {
-    color: #007bff;
+    color: #3C0295;
     font-weight: bold;
 }
 
